samples/_failures_safe/1761073474_e090b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_388645b9.c: In function ‘main’:
./samples/SAFE/__tmp_388645b9.c:162:5: error: expected declaration or statement at end of input
  162 |     printf("Decompressed data (%zu bytes): ", decompressed.size);
      |     ^~~~~~
